add py-link style to homepage

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -11,6 +11,11 @@
         <li><a class="db mb2 no-underline" href="https://dribbble.com/matthewlyle"><i class="fa fa-dribbble mr2" aria-hidden="true"></i> Dribbble</a></li>
         <li><a class="db mb2 no-underline" href="https://500px.com/matthewlyle"><i class="fa fa-500px mr2" aria-hidden="true"></i> 500px</a></li>
         <li><a class="db mb2 no-underline" href="http://github.com/matthewlyle"><i class="fa fa-github mr2" aria-hidden="true"></i> Github</a></li>
+        <li><a class="dib mb3 py-link" href="http://twitter.com/mmatthewlyle"><i class="fa fa-twitter mr2" aria-hidden="true"></i> Twitter</a></li>
+        <li><a class="dib mb3 py-link" href="https://www.instagram.com/matthewlyle/"><i class="fa fa-instagram mr2" aria-hidden="true"></i> Instagram</a></li>
+        <li><a class="dib mb3 py-link" href="https://dribbble.com/matthewlyle"><i class="fa fa-dribbble mr2" aria-hidden="true"></i> Dribbble</a></li>
+        <li><a class="dib mb3 py-link" href="https://500px.com/matthewlyle"><i class="fa fa-500px mr2" aria-hidden="true"></i> 500px</a></li>
+        <li><a class="dib py-link" href="http://github.com/matthewlyle"><i class="fa fa-github mr2" aria-hidden="true"></i> Github</a></li>
       </ul>
     </div>
   </div>
