--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -7,3 +7,15 @@ body {
 }
 
 h1, h2, h3, h4, .brandon {font-family: $sans}
+
+.py-link {
+	color: #000;
+	background: yellow;
+	text-decoration: none;
+	transition: .2s;
+	display: inline-block;
+	&:hover {
+		transform: scale(1.1);
+	}
+}
+
