--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,16 +1,12 @@
   <div class="cf">
     <div class="w-60-ns fl-ns pr5-ns">
     	<h1 class="mt0">Contact</h1>
-      	<p class="f3 f2-ns mt0 lh-copy">The best way to start our beautiful new friendship is to <a href="mailto:matt@processyellow.ca">email</a> me.</p>
+      <img src="/images/me.jpg" class="br-100 h4 w4 dib fl mr4" alt="">
+      	<p class="f3 f2-ns mt0 mb0 lh-copy">The best way to start our beautiful new friendship is to <a href="mailto:matt@processyellow.ca" class="py-link">email</a> me.</p>
     </div>
-    <div class="w-40-ns fl-ns">
-      <ul class="list pl0">
-        <p class="f4 mt0">I'm also very creepable, all over the internet:</p>
-        <li><a class="db mb2 no-underline" href="http://twitter.com/mmatthewlyle"><i class="fa fa-twitter mr2" aria-hidden="true"></i> Twitter</a></li>
-        <li><a class="db mb2 no-underline" href="https://www.instagram.com/matthewlyle/"><i class="fa fa-instagram mr2" aria-hidden="true"></i> Instagram</a></li>
-        <li><a class="db mb2 no-underline" href="https://dribbble.com/matthewlyle"><i class="fa fa-dribbble mr2" aria-hidden="true"></i> Dribbble</a></li>
-        <li><a class="db mb2 no-underline" href="https://500px.com/matthewlyle"><i class="fa fa-500px mr2" aria-hidden="true"></i> 500px</a></li>
-        <li><a class="db mb2 no-underline" href="http://github.com/matthewlyle"><i class="fa fa-github mr2" aria-hidden="true"></i> Github</a></li>
+    <div class="w-30-ns fr-ns f4">
+      <p class="mt0">I'm also very creepable:</p>
+      <ul class="list pl0 mb0">
         <li><a class="dib mb3 py-link" href="http://twitter.com/mmatthewlyle"><i class="fa fa-twitter mr2" aria-hidden="true"></i> Twitter</a></li>
         <li><a class="dib mb3 py-link" href="https://www.instagram.com/matthewlyle/"><i class="fa fa-instagram mr2" aria-hidden="true"></i> Instagram</a></li>
         <li><a class="dib mb3 py-link" href="https://dribbble.com/matthewlyle"><i class="fa fa-dribbble mr2" aria-hidden="true"></i> Dribbble</a></li>
