--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,21 @@
+<!--
+
+Awkard note:
+
+I'm using this new site for two things. One is to get jobs.
+The other is to write up an article on optimizing your website.
+This means that if you came here to consider giving me a job,
+this site might look a little unoptimized. So here's the sneaky
+list of things I plan to improve on this:
+
+- Combine remaining css with gulp
+- Minimize js with gulp
+- Lazyload slider images
+- Optimize pngs/jpgs
+- Use a CDN
+
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
