fix header styles

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,14 +45,14 @@ list of things I plan to improve on this:
 
 <body class="pt5 pb5">
 
-  <header class="mb5 brandon white">
+  <header class="mb4 brandon white">
     <div class="container cf">
       <a href="/" class="b f3 white no-underline fl effect_pop-up">processyellow.ca</a>
       <div class="fr f3 white b brandon">
         <div class="is-hidden-on-mobile">
-          <a href="/#portfolio" class="b pa1 pa3-l f4 mr3 no-underline brandon white effect_pop-up">Portfolio</a>
-          <a href="/resume.pdf" class="b pa1 pa3-l f4 mr3 no-underline brandon white effect_pop-up">Resume</a>
-          <a href="/#contact" class="b pa1 pa3-l f4 no-underline brandon white effect_pop-up">Contact</a>
+          <a href="/#portfolio" class="b pa1 pa3-l f4 mr3 no-underline brandon white effect_pop-up dib">Portfolio</a>
+          <a href="/resume.pdf" class="b pa1 pa3-l f4 mr3 no-underline brandon white effect_pop-up dib">Resume</a>
+          <a href="/#contact" class="b pa1 pa3-l f4 no-underline brandon white effect_pop-up dib">Contact</a>
         </div>
         <div class="is-visible-on-mobile">
             <a href="javascript:" data-remodal-target="menu" class="b pa1 pa3-l f4 no-underline brandon white effect_pop-up">Menu</a>
