update contact design

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,10 +1,10 @@
   <div class="cf">
-    <div class="w-60-ns fl-ns pr5-ns">
+    <div class="w-60-l fl-l pr5-ns mb5 mb0-l">
     	<h1 class="mt0">Contact</h1>
-      <img src="/images/me.jpg" class="br-100 h4 w4 dib fl mr4" alt="">
-      	<p class="f3 f2-ns mt0 mb0 lh-copy">The best way to start our beautiful new friendship is to <a href="mailto:matt@processyellow.ca" class="py-link">email</a> me.</p>
+      <img src="/images/me.jpg" class="br-100 h4 w4 dib fl mr4 is-hidden-on-mobile" alt="">
+      	<p class="f2-m f2-l mt0 mb0 lh-copy">The best way to start our beautiful new friendship is to <a href="mailto:matt@processyellow.ca" class="py-link">email</a> me.</p>
     </div>
-    <div class="w-30-ns fr-ns f4">
+    <div class="w-30-l fr-l f4">
       <p class="mt0">I'm also very creepable:</p>
       <ul class="list pl0 mb0">
         <li><a class="dib mb3 py-link" href="http://twitter.com/mmatthewlyle"><i class="fa fa-twitter mr2" aria-hidden="true"></i> Twitter</a></li>
