add background to main

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,6 @@
 {% include head.html %}
 <div class="container container--l">
-	<main class="bg-white">
+	<main class="bg-white br2">
 		{{content}}
 	</main>
 </div>
