--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -2,13 +2,13 @@
 <p class="f2-ns">This is an assorted collection of design work completed between 2009 and 2017.</p>
 <div class="js-portfolio-slider">
 	<img src="/images/portfolio/fleetbit/fleetbit-1.jpg" />
-	<img data-lazy="/images/portfolio/fleetbit/fleetbit-2.jpg" />
-	<img data-lazy="/images/portfolio/intrafinity/glenn-heights_active-nav.jpg" />
-	<img data-lazy="/images/portfolio/intrafinity/rhr.png" />
-	<img data-lazy="/images/portfolio/dreamhost/manage.png" />
-	<img data-lazy="/images/portfolio/cpaws/cpaws-1.jpg" />
-	<img data-lazy="/images/portfolio/cpaws/cpaws-2.jpg" />
-	<img data-lazy="/images/portfolio/mad-dog/mad-dog.png" />
-	<img data-lazy="/images/portfolio/jk-contracting/jkc-1.jpg" />
-	<img data-lazy="/images/portfolio/readable-gutenberg.jpg" />
+	<img src="/images/portfolio/fleetbit/fleetbit-2.jpg" />
+	<img src="/images/portfolio/intrafinity/glenn-heights_active-nav.jpg" />
+	<img src="/images/portfolio/intrafinity/rhr.png" />
+	<img src="/images/portfolio/dreamhost/manage.png" />
+	<img src="/images/portfolio/cpaws/cpaws-1.jpg" />
+	<img src="/images/portfolio/cpaws/cpaws-2.jpg" />
+	<img src="/images/portfolio/mad-dog/mad-dog.png" />
+	<img src="/images/portfolio/jk-contracting/jkc-1.jpg" />
+	<img src="/images/portfolio/readable-gutenberg.jpg" />
 </div>
