--- a/_includes/latest-work.html
+++ b/_includes/latest-work.html
@@ -1,7 +1,7 @@
 <h1 class="mt0">Latest work</a></h1>
 <div class="cf">
 	<div class="bg-dreamhost-blue fl-l w-50-l pa3 pa5-ns white mb3 mb0-ns"  min-height: 390px;">
-		<img src="/images/logo.dreamhost.white.svg" alt="" style="margin-top: 20px; margin-bottom: 40px;" />
+		<img src="/images/logo.dreamhost.white.svg" alt="" />
 		 <p class="f4-ns lh-copy measure mb4 center">I've been working for DreamHost for over 2 years, doing fun things like upgrading their customer support area, creating a functional <a href="http://dreamhost.github.io/dreamhost.css/" class="light-gray">CSS framework</a> and being Lead Product Designer for their flagship DreamPress product.</p>
 		  <a href="/portfolio/dreamhost" class="white underline">Learn more</a>
 	</div>
