--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fluidbox/1.4.3.1/css/fluidbox.css">
 
-<script src="/mattdoesthings.js"></script>
+<script src="/processyellow.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fluidbox/1.4.3.1/jquery.fluidbox.min.js"></script>
 
