--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@ list of things I plan to improve on this:
 
 	<title>{{page.title}}</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="/mattdoesthings.css"/>
+	<link rel="stylesheet" href="/processyellow.css"/>
 
 
   <script src="//use.typekit.net/ovg8nyu.js"></script>
