add another item to to-do list

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@ list of things I plan to improve on this:
 - Lazyload slider images
 - Optimize pngs/jpgs
 - Use a CDN
+- Maybe move to own server? I haven't tested gh-pages yet.
 
  -->
 
