update portfolio images

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -3,7 +3,7 @@
 <div class="js-portfolio-slider">
 	<img src="/images/portfolio/fleetbit/fleetbit-1.jpg" />
 	<img src="/images/portfolio/fleetbit/fleetbit-2.jpg" />
-	<img src="/images/portfolio/intrafinity/glenn-heights_active-nav.jpg" />
+	<img src="/images/portfolio/intrafinity/glenn-heights_active-nav.png" />
 	<img src="/images/portfolio/intrafinity/rhr.png" />
 	<img src="/images/portfolio/dreamhost/manage.png" />
 	<img src="/images/portfolio/cpaws/cpaws-1.jpg" />
