--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,49 +21,27 @@ list of things I plan to improve on this:
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>{{page.title}}</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/processyellow.css"/>
 
+	<script src="//use.typekit.net/ovg8nyu.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
 
-  <script src="//use.typekit.net/ovg8nyu.js"></script>
-  <script>try{Typekit.load();}catch(e){}</script>
+	<script>
+		// (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		// (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		// m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		// })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    <script>
-      // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      // })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      // ga('create', 'UA-63030383-1', 'auto');
-      // ga('send', 'pageview');
-    </script>
-
-
+		// ga('create', 'UA-63030383-1', 'auto');
+		// ga('send', 'pageview');
+	</script>
 </head>
 
 <body class="pt5 pb5">
 
-  <header class="mb4 brandon white">
-    <div class="container cf">
-      <a href="/" class="b f3 white no-underline fl effect_pop-up">processyellow.ca</a>
-      <div class="fr f3 white b brandon">
-        <div class="is-hidden-on-mobile">
-          <a href="/#portfolio" class="b pa1 pa3-l f4 mr3 no-underline brandon white effect_pop-up dib">Portfolio</a>
-          <a href="/resume.pdf" class="b pa1 pa3-l f4 mr3 no-underline brandon white effect_pop-up dib">Resume</a>
-          <a href="/#contact" class="b pa1 pa3-l f4 no-underline brandon white effect_pop-up dib">Contact</a>
-        </div>
-        <div class="is-visible-on-mobile">
-            <a href="javascript:" data-remodal-target="menu" class="b pa1 pa3-l f4 no-underline brandon white effect_pop-up">Menu</a>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <div data-remodal-id="menu" class="remodal br2 tl f4 b ttu tc brandon">
-    <a href="/#portfolio" class="db mt3 mb5 black no-underline">Portfolio</a>
-    <a href="/resume.pdf" class="db mb5 black no-underline">Resume.pdf</a>
-    <a href="/#contact" class="db mb3 black no-underline">Contact</a>
-  </div>
+	{% include header.html %}
