--- a/src/_responsive.scss
+++ b/src/_responsive.scss
@@ -1,7 +1,7 @@
-@media screen and (min-width: 650px){
+@media screen and (min-width: $mobile){
 	.is-visible-on-mobile {display: none;}
 }
-@media screen and (max-width: 650px){
+@media screen and (max-width: $mobile){
 	.is-hidden-on-mobile {display: none;}
 }
 
