add new gallery images

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,14 +1,16 @@
-<h1 class="mt0">Gallery</h1>
+<h1 class="mt0" id="gallery-link">Gallery</h1>
 <p class="f2-ns">This is an assorted collection of design work completed between 2009 and 2017.</p>
 <div class="js-portfolio-slider">
 	<img src="/images/portfolio/fleetbit/fleetbit-1.jpg" />
 	<img src="/images/portfolio/fleetbit/fleetbit-2.jpg" />
+	<img src="/images/portfolio/dreamhost/manage.png" />
+	<img src="/images/portfolio/dreamhost/alerts.png" />
+	<img src="/images/portfolio/mad-dog/mad-dog-cafe-soups-salad.jpg" />
 	<img src="/images/portfolio/intrafinity/glenn-heights_active-nav.png" />
 	<img src="/images/portfolio/intrafinity/rhr.png" />
-	<img src="/images/portfolio/dreamhost/manage.png" />
 	<img src="/images/portfolio/cpaws/cpaws-1.jpg" />
 	<img src="/images/portfolio/cpaws/cpaws-2.jpg" />
 	<img src="/images/portfolio/mad-dog/mad-dog.png" />
 	<img src="/images/portfolio/jk-contracting/jkc-1.jpg" />
-	<img src="/images/portfolio/readable-gutenberg.jpg" />
+	<!-- <img src="/images/portfolio/readable-gutenberg.jpg" /> -->
 </div>
