--- a/_includes/latest-work.html
+++ b/_includes/latest-work.html
@@ -3,12 +3,12 @@
 	<div class="bg-dreamhost-blue fl-l w-50-l pa3 pa5-ns white mb3 mb0-ns"  min-height: 390px;">
 		<img src="/images/logo.dreamhost.white.svg" alt="" />
 		 <p class="f4-ns lh-copy measure mb4 center">I've been working for DreamHost for over 2 years, doing fun things like upgrading their customer support area, creating a functional <a href="http://dreamhost.design/" class="light-gray">CSS framework</a> and being Lead Product Designer for their flagship DreamPress product.</p>
-		  <a href="/portfolio/dreamhost" class="white underline">Learn more</a>
+		  <a href="/portfolio/dreamhost" class="py-link"">Learn more</a>
 	</div>
 	<div class="fl-l w-50-l pa3 pa5-ns">
 		<img src="/images/logo.civiclive.svg" alt="" />
 		 <p class="f4-ns lh-copy mb4">I helped CivicLive scale their white-label software product and designed a Learning Management System for elementary and post-secondary schools.</p>
-		  <a href="/portfolio/civiclive/" class="underline">Learn more</a>
+		  <a href="/portfolio/civiclive/" class="py-link">Learn more</a>
 	</div>
 </div>
 
